--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
 
 
+    <section>
+        <h1>REVOLUTIONARY.</h1>
+        <video src="videos/iphone-vid.mp4"></video>
+    </section>
+
 
 
     
