--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPhone</title>
 
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d8a371186e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
@@ -17,59 +17,55 @@
 
 <body>
 
-    <main>
-        <section class="landing">
+
+        <section class="landing" id = "homepage">
+            <div class="container-fluid">
 
 
-      <nav>
-        <h1 id="heading"><i class="fab fa-apple"></i></h1>
-        <ul class="nav-links">
-            <li>Home</li>
-            <li>Specs</li>
-            <li>Buy</li>
-        </ul>
-    </nav>
-        <h2 class="tagline">MyPhone 12</h2>
-     
-
-
-
-
-    </section>
-    <div class="intro">
-        <div class="intro-text">
-            <h1 class="hide">
-                <span class="text">The new MyPhone 12</span>
-            </h1>
-            <h1 class="hide">
-                <span class="text">Stunning Performance.</span>
-            </h1>
-            <h1 class="hide">
-                <span class="text">Awesome Cameras.</span>
-            </h1>
-
-        </div>
+            <nav class="navbar fixed-top navbar-light bg-light">
+                <a class="navbar-brand" href="#homepage"><i class="fab fa-apple"></i></a>
+                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="#">Buy</a>
+                <a class="navbar-brand" href="#">Contact</a>
+              </nav>
+        <h2 class="tagline">The Best Phone.</h2>
     </div>
-        <div class="slider"></div>
-    </main>
 
 
 
-
-
-    <section>
-        <h1>REVOLUTIONARY.</h1>
-        <video src="videos/iphone-vid.mp4"></video>
     </section>
 
+    <div class="hero container-fluid">
+        <div class="content" data-aos="fade-up" data-aos-duration= "2000">
+        <h1 class="hero-heading">Stunning Cameras...</h1>
+        <p class="hero-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+        <img class = "hero-img" data-aos="fade-left" data-aos-duration= "2000" src="images/hero.jpg" alt="iphone-img">
+    </div>
+
+    <div class="feature-div">
+        <div class="smash-content" data-aos="zoom-out-up" data-aos-duration="2000">
+        <h1 class="feature-heading">(Un)Breakable!</h1>
+        <p class="feature-content"> <strong>"Glass is glass and glass breaks."</strong>
+            <br>
+            -Jerry Rig Everything
+        </p>
+    </div>
+        <img class = "smash-gif" data-aos="zoom-in-down" data-aos-duration="1500" src="https://media1.tenor.com/images/4d9f0162b887e91873ca2676ac0eb08d/tenor.gif?itemid=10301487" alt="">
+    </div>
 
 
-    
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js" integrity="sha512-2LEOQqARBlk67mYfoWcJah3Rt1Tan5TYsWUNBPtviIk206eyqQpUSpuBK5S77UFu3Pm+zlJOdw8uP5UfO/AtPw==" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="skrollr.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/1.0.5/ScrollTrigger.min.js" integrity="sha512-m/n857VfrPYUcRvzCfqfrC9aMT06TQA2V0DcX/Ovovrhswa3038FfYmHlB0l/ZMukVyKWmiwZI4Pnnd7v3FwFQ==" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+
 </body>
 </html>
