--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPhone</title>
 
+    <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d8a371186e.js" crossorigin="anonymous"></script>
@@ -24,9 +25,9 @@
 
             <nav class="navbar fixed-top navbar-light bg-light">
                 <a class="navbar-brand" href="#homepage"><i class="fab fa-apple"></i></a>
-                <a class="navbar-brand" href="#">Home</a>
-                <a class="navbar-brand" href="#">Buy</a>
-                <a class="navbar-brand" href="#">Contact</a>
+                <a class="navbar-brand nav-link" href="#">Home</a>
+                <a class="navbar-brand nav-link" href="#buy-now">Buy</a>
+                <a class="navbar-brand nav-link" href="#">Contact</a>
               </nav>
         <h2 class="tagline">The Best Phone.</h2>
     </div>
@@ -53,6 +54,54 @@
     </div>
         <img class = "smash-gif" data-aos="zoom-in-down" data-aos-duration="1500" src="https://media1.tenor.com/images/4d9f0162b887e91873ca2676ac0eb08d/tenor.gif?itemid=10301487" alt="">
     </div>
+
+    <div class="charge-div">
+        <div class="smash-content" data-aos="zoom-in-up" data-aos-duration="2000">
+        <h1 class="charge-heading">Fast Charging</h1>
+        <p class="charge-content"> <strong>REVOLUTIONARY!</strong>
+            <br>
+            We at apple, don't believe in invention... We wait for the others to invent and copy that... This charger* will allow you to charge your phone in 15 minutes!
+        </p>
+        <br>
+        <p class="disclaimer">*Charger only available separately for just $99.99.</p>
+    </div>
+        <img class = "charge-gif" data-aos="zoom-out-left" data-aos-duration="1500" src="images/charge.gif" alt="">
+    </div>
+
+
+<section id="buy-now">
+    <div class="item-div">
+        <div class="card">
+            <div class="imgbox">
+                <img class = "price-img" src="https://assets.stickpng.com/thumbs/5cb0633d80f2cf201a4c3253.png" alt="">
+            </div>
+    <div class="card-content">
+        <h2>MyPhone 12</h3>
+            <div class="storage">
+            <h3>Storage: </h3>
+            <span>100</span>
+            <span>128</span>
+            <span>256</span>
+            <span>512</span>
+        </div>
+        <div class="colour">
+        <h3>Colour: </h3>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <a href="#">Buy Now</a>
+    </div>
+</div>
+</div>
+</section>
+
+<div class="readmore">
+    <h1>Wanna know more?</h1>
+    <a class = "btn"href="https://www.apple.com/iphone-12-pro/"><span class="readmore-span"></span>Read More</a>
+</div>
+
 
 
 
