--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <span></span>
             <span></span>
         </div>
-        <a href="#">Buy Now</a>
+        <a href="https://www.apple.com/in/shop/buy-iphone/iphone-12-pro">Buy Now</a>
     </div>
 </div>
 </div>
@@ -99,7 +99,7 @@
 
 <div class="readmore">
     <h1>Wanna know more?</h1>
-    <a class = "btn"href="https://www.apple.com/iphone-12-pro/"><span class="readmore-span"></span>Read More</a>
+    <button type="button" class="btn btn-outline-light">Know More</button>
 </div>
 
 
