--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
 
 
-        <section class="landing" id = "homepage">
+        <section id="home" class="landing">
             <div class="container-fluid">
 
 
             <nav class="navbar fixed-top navbar-light bg-light">
-                <a class="navbar-brand" href="#homepage"><i class="fab fa-apple"></i></a>
+                <a class="navbar-brand" href="#"><i class="fab fa-apple"></i></a>
                 <a class="navbar-brand nav-link" href="#">Home</a>
                 <a class="navbar-brand nav-link" href="#buy-now">Buy</a>
-                <a class="navbar-brand nav-link" href="#">Contact</a>
+                <a class="navbar-brand nav-link" href="#footer">Contact</a>
               </nav>
         <h2 class="tagline">The Best Phone.</h2>
     </div>
@@ -71,7 +71,7 @@
 
 <section id="buy-now">
     <div class="item-div">
-        <div class="card">
+        <div class="card" data-aos="fade-up-right" data-aos-duration="1500">
             <div class="imgbox">
                 <img class = "price-img" src="https://assets.stickpng.com/thumbs/5cb0633d80f2cf201a4c3253.png" alt="">
             </div>
@@ -99,8 +99,27 @@
 
 <div class="readmore">
     <h1>Wanna know more?</h1>
-    <button type="button" class="btn btn-outline-light">Know More</button>
+    <button type="button" class="btn btn-outline-light">Read More</button>
 </div>
+
+<div class="contact" style="text-align: center;">
+    <h1 style="font-family: 'Montserrat'; font-size: 3rem; font-weight: 500; padding-top: 25px;">Want to talk to our excellent customer care?</h1>
+    <button type="button" class="btn btn-outline-dark contackt-btn" style="padding : 10px; margin: 20px ;">Contact Us</button>
+</div>
+
+<div id="footer" class="footer">
+    <div class="icons">
+    <a href="#"><i class="fab fa-twitter footer-icon"></i></a>
+    <a href="#"><i class="fab fa-facebook footer-icon"></i></a>
+    <a href="#"><i class="fab fa-youtube footer-icon"></i></a>
+    <a href="#"><i class="fab fa-instagram footer-icon"></i></a>
+    <a href="#"><i class="fas fa-envelope footer-icon"></i></a>
+
+</div>
+</div>
+
+
+
 
 
 
